<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tv_player_vs_player"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/rounded_button"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/player_vs_player"/>

    <TextView
        android:id="@+id/tv_player_vs_computer_easy"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/rounded_button"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/player_vs_computer_easy"/>

    <TextView
        android:id="@+id/tv_player_vs_computer_hard"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/rounded_button"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/player_vs_computer_hard"/>

    <TextView
        android:id="@+id/tv_about"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/rounded_button"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/about"/>


</LinearLayout>