<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/fullscreen_content"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".GameActivity">

    <GridLayout
        android:id="@+id/gl_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:columnCount="2"
        android:rowCount="3"
        android:background="@color/black_overlay">

        <TextView
            android:id="@+id/tv_player_one"
            android:textAlignment="center"
            android:layout_columnWeight="1"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/player_1"/>

        <TextView
            android:id="@+id/tv_player_two"
            android:textAlignment="center"
            android:layout_columnWeight="1"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/player_2"/>

        <ImageView
            android:id="@+id/iv_player_one_icon"
            android:layout_columnWeight="1"
            android:layout_marginTop="10dp"
            android:src="@drawable/baseline_close_24"/>

        <ImageView
            android:id="@+id/iv_player_two_icon"
            android:layout_columnWeight="1"
            android:layout_marginTop="10dp"
            android:src="@drawable/baseline_panorama_fish_eye_24"/>

        <ImageView
            android:id="@+id/iv_placeholder"
            android:layout_columnWeight="1"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_reset"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/new_game"
            android:textSize="24sp"
            android:visibility="gone"
            android:background="@drawable/rounded_button" />

    </GridLayout>

    <GridLayout
        android:id="@+id/gl_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:columnCount="3"
        android:rowCount="3">

        <ImageView
            android:id="@+id/iv_one"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
            android:background="@drawable/rounded_primary" />

        <ImageView
            android:id="@+id/iv_two"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
            android:background="@drawable/rounded_primary" />

        <ImageView
            android:id="@+id/iv_three"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
            android:background="@drawable/rounded_primary" />

        <ImageView
            android:id="@+id/iv_four"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
            android:background="@drawable/rounded_primary" />

        <ImageView
        android:id="@+id/iv_five"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
        android:background="@drawable/rounded_primary" />

        <ImageView
            android:id="@+id/iv_six"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
            android:background="@drawable/rounded_primary" />

        <ImageView
            android:id="@+id/iv_seven"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
            android:background="@drawable/rounded_primary" />

        <ImageView
            android:id="@+id/iv_eight"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
            android:background="@drawable/rounded_primary" />

        <ImageView
            android:id="@+id/iv_nine"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_holder_24"
            android:background="@drawable/rounded_primary" />

    </GridLayout>

</LinearLayout>